syntax = "proto3";
package DomainServices.SalesArrangementService;
option csharp_namespace = "DomainServices.SalesArrangementService.Contracts";

import "Parameters/SalesArrangementParametersMortgage.proto";
import "Parameters/SalesArrangementParametersDrawing.proto";
import "Parameters/SalesArrangementParametersGeneralChange.proto";
import "Parameters/SalesArrangementParametersHUBN.proto";

message UpdateSalesArrangementParametersRequest {
	int32 SalesArrangementId = 1;
	
	oneof Data {
        DomainServices.SalesArrangementService.SalesArrangementParametersMortgage Mortgage = 20;
		DomainServices.SalesArrangementService.SalesArrangementParametersDrawing Drawing = 21;
		SalesArrangementParametersGeneralChange GeneralChange = 22;
		SalesArrangementParametersHUBN HUBN = 23;
    }
}
